RaylibSharp/Raylib.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageGradientV(int width, int height, Color top, Color bottom);                           // Generate image: vertical gradient

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageGradientH(int width, int height, Color left, Color right);                           // Generate image: horizontal gradient

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageGradientRadial(int width, int height, float density, Color inner, Color outer);      // Generate image: radial gradient

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageChecked(int width, int height, int checksX, int checksY, Color col1, Color col2);    // Generate image: checked

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageWhiteNoise(int width, int height, float factor);                                     // Generate image: white noise

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);           // Generate image: perlin noise

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageCellular(int width, int height, int tileSize);                                       // Generate image: cellular algorithm. Bigger tileSize means bigger cells

		// Texture2D configuration functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void GenTextureMipmaps(Texture2D* texture);                                                        // Generate GPU mipmaps for a texture

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetTextureFilter(Texture2D texture, TextureFilterMode filterMode);                                          // Set texture scaling filter mode

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetTextureWrap(Texture2D texture, TextureWrapMode wrapMode);                                              // Set texture wrapping mode

		// Texture2D drawing functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTexture(Texture2D texture, int posX, int posY, Color tint);                               // Draw a Texture2D

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextureV(Texture2D texture, Vector2 position, Color tint);                                // Draw a Texture2D with position defined as Vector2

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextureEx(Texture2D texture, Vector2 position, float rotation, float scale, Color tint);  // Draw a Texture2D with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextureRec(Texture2D texture, Rectangle sourceRec, Vector2 position, Color tint);         // Draw a part of a texture defined by a rectangle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextureQuad(Texture2D texture, Vector2 tiling, Vector2 offset, Rectangle quad, Color tint);  // Draw texture quad with tiling and offset parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTexturePro(Texture2D texture, Rectangle sourceRec, Rectangle destRec, Vector2 origin, float rotation, Color tint);       // Draw a part of a texture defined by a rectangle with 'pro' parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextureNPatch(Texture2D texture, NPatchInfo nPatchInfo, Rectangle destRec, Vector2 origin, float rotation, Color tint);  // Draws a texture (or part of it) that stretches or shrinks nicely

		//------------------------------------------------------------------------------------
		// Font Loading and Text Drawing Functions (Module: text)
		//------------------------------------------------------------------------------------

		// Font loading/unloading functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Font GetFontDefault();                                                            // Get the default Font

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Font LoadFont(string fileName);                                                  // Load font from file into GPU memory (VRAM)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Font LoadFontEx(string fileName, int fontSize, int* fontChars, int charsCount);  // Load font from file with extended parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Font LoadFontFromImage(Image image, Color key, int firstChar);                        // Load font from Image (XNA style)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern CharInfo* LoadFontData(string fileName, int fontSize, int* fontChars, int charsCount, int type); // Load font data for further use

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Image GenImageFontAtlas(CharInfo* chars, Rectangle** recs, int charsCount, int fontSize, int padding, int packMethod);  // Generate image font atlas using chars info

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void UnloadFont(Font font);                                                           // Unload Font from GPU memory (VRAM)

		// Text drawing functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawFPS(int posX, int posY);                                                     // Shows current FPS

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawText(string text, int posX, int posY, int fontSize, Color color);       // Draw text (using default font)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextEx(Font font, string text, Vector2 position, float fontSize, float spacing, Color tint);                // Draw text using font and additional parameters

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextRec(Font font, string text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint);   // Draw text using font inside rectangle limits

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawTextRecEx(Font font, string text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint,
										int selectStart, int selectLength, Color selectText, Color selectBack);    // Draw text using font inside rectangle limits with support for text selection

		// Text misc. functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int MeasureText(string text, int fontSize);                                      // Measure string width for default font

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 MeasureTextEx(Font font, string text, float fontSize, float spacing);    // Measure string size for Font

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetGlyphIndex(Font font, int character);                                          // Get index position for a unicode character on font

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetNextCodepoint(string text, int* bytesProcessed);                          // Returns next codepoint in a UTF8 encoded string
																											  // NOTE: 0x3f('?') is returned on failure

		// Text strings management functions
		// NOTE: Some strings allocate memory internally for returned strings, just be careful!

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool TextIsEqual(string text1, string text2);                               // Check if two text string are equal

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern uint TextLength(string text);                                            // Get text length, checks for '\0' ending

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern uint TextCountCodepoints(string text);                                   // Get total number of characters (codepoints) in a UTF8 encoded string

		//[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		//public static extern string TextFormat(string text, ...);                                        // Text formatting with variables (sprintf style)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string TextSubtext(string text, int position, int length);                  // Get a piece of a text string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern char* TextReplace(char* text, string replace, string by);                   // Replace text string (memory should be freed!)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern char* TextInsert(string text, string insert, int position);                 // Insert text in a position (memory should be freed!)

		//[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		//public static extern string TextJoin(string* textList, int count, string delimiter);        // Join text strings with delimiter

		//[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		//public static extern string* TextSplit(string text, char delimiter, int* count);                 // Split text into multiple strings

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextAppend(char* text, string append, int* position);                       // Append text at specific position and move cursor!

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int TextFindIndex(string text, string find);                                // Find first text occurrence within a string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string TextToUpper(string text);                      // Get upper case version of provided string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string TextToLower(string text);                      // Get lower case version of provided string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string TextToPascal(string text);                     // Get Pascal case notation version of provided string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int TextToInteger(string text);                            // Get integer value from text (negative values not supported)

		//------------------------------------------------------------------------------------
		// Basic 3d Shapes Drawing Functions (Module: models)
		//------------------------------------------------------------------------------------

		// Basic geometric 3D shapes drawing functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    // Draw a line in 3D world space
